// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User.opinionVersions connection fetches a user's opinionVersions when authenticated.: VXNlcjp1c2VyMg 1`] = `
Object {
  "node": Object {
    "opinionVersions": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "createdAt": "2015-01-02 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMg==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "createdAt": "2015-01-03 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMw==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "createdAt": "2015-04-05 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uNA==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "createdAt": "2015-04-06 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uNQ==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "createdAt": "2015-04-07 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uNg==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "hasNextPage": true,
      },
      "totalCount": 9,
    },
  },
}
`;

exports[`User.opinionVersions connection fetches a user's opinionVersions when authenticated.: VXNlcjp1c2VyQWRtaW4 1`] = `
Object {
  "node": Object {
    "opinionVersions": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "createdAt": "2018-01-03 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMTY=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "createdAt": "2018-03-07 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMTk=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "createdAt": "2018-03-08 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMjA=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "createdAt": "2018-03-09 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMjE=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "createdAt": "2018-03-10 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMjI=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "hasNextPage": true,
      },
      "totalCount": 28,
    },
  },
}
`;

exports[`User.opinionVersions connection fetches a user's opinionVersions when authenticated.: VXNlcjp1c2VyQWRtaW4 2`] = `
Object {
  "node": Object {
    "opinionVersions": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "createdAt": "2018-01-03 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMTY=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "createdAt": "2018-03-07 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMTk=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "createdAt": "2018-03-08 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMjA=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "createdAt": "2018-03-09 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMjE=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "createdAt": "2018-03-10 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMjI=",
            "project": Object {
              "visibility": "ME",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "hasNextPage": true,
      },
      "totalCount": 28,
    },
  },
}
`;

exports[`User.opinionVersions connection fetches a user's public versions.: VXNlcjp1c2VyMg 1`] = `
Object {
  "node": Object {
    "opinionVersions": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "createdAt": "2015-01-02 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMg==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjE=",
          "node": Object {
            "createdAt": "2015-01-03 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uMw==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjI=",
          "node": Object {
            "createdAt": "2015-04-05 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uNA==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjM=",
          "node": Object {
            "createdAt": "2015-04-06 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uNQ==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjQ=",
          "node": Object {
            "createdAt": "2015-04-07 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uNg==",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjQ=",
        "hasNextPage": true,
      },
      "totalCount": 9,
    },
  },
}
`;

exports[`User.opinionVersions connection fetches a user's public versions.: VXNlcjp1c2VyQWRtaW4 1`] = `
Object {
  "node": Object {
    "opinionVersions": Object {
      "edges": Array [
        Object {
          "cursor": "YXJyYXljb25uZWN0aW9uOjA=",
          "node": Object {
            "createdAt": "2019-01-03 00:00:00",
            "id": "VmVyc2lvbjp2ZXJzaW9uNDU=",
            "project": Object {
              "visibility": "PUBLIC",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
        "hasNextPage": false,
      },
      "totalCount": 1,
    },
  },
}
`;
